--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">   
+    <ion-buttons slot="start">
+      <ion-menu-button color="warning" menu="primerMenu"></ion-menu-button>
+    </ion-buttons>
+
+    <ion-tab-button (click)="menuFinca()" >
+      <ion-icon name="home-outline"></ion-icon>      
+      <ion-label>Finca</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button (click)="menuSiembra()">
+      <ion-icon name="leaf-outline"></ion-icon>
+      <ion-label>Siembra</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button (click)="menuAplicacion()">
+      <ion-icon name="reader-outline"></ion-icon>
+      <ion-label>Ejecutadas</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
+</ion-tabs>
