--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<!--<ion-tabs>
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
@@ -15,6 +15,22 @@
       <ion-icon name="reader-outline"></ion-icon>
       <ion-label>Ejecutadas</ion-label>
     </ion-tab-button>
+    
+    <ion-buttons slot="start">
+      <ion-menu-button color="warning" menu="primerMenu"></ion-menu-button>
+    </ion-buttons>
+
+    <ion-tab-button (click)="menuFinca()" >
+      <ion-icon name="home-outline"></ion-icon>      
+      <ion-label>Finca</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab2">
+      <ion-icon name="clipboard-outline"></ion-icon>
+      <ion-label>Lote</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
+-->
