--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,11 @@
       <ion-label>Finca</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button (click)="menuSiembra()">
+    <!--<ion-tab-button (click)="menuSiembra()">
       <ion-icon name="leaf-outline"></ion-icon>
       <ion-label>Siembra</ion-label>
     </ion-tab-button>
-
+    -->
     <ion-tab-button (click)="menuAplicacion()">
       <ion-icon name="reader-outline"></ion-icon>
       <ion-label>Ejecutadas</ion-label>
