--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
 
     <img src="../../../assets/img/logoInicio.jpg" />
     <ion-card-header>      
-      <ion-card-title>Agenda App</ion-card-title>
+      <ion-card-title>Agenda Agrícola</ion-card-title>
     </ion-card-header>    
   </ion-card>
 </ion-content>
