--- a/src/app/pages/siembra/siembra.page.html
+++ b/src/app/pages/siembra/siembra.page.html
@@ -1,8 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>    
-    <ion-button color="light" size="small" routerLink="/home">
-      <ion-icon name="arrow-back-outline"></ion-icon>
-    </ion-button>
+  <ion-toolbar>        
     <ion-title stacked class="my-title" color="dark">
       <div font size=4 align="center"><strong>AGENDA APP</strong></div>
       <div font size=1 align="center"><i>
@@ -13,52 +10,80 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="medium">Plano de Siembra</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <form #form="ngForm" (ngSubmit)="registrar(form)">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
+
+  <form #form1="ngForm" (ngSubmit)="siguiente1(form1)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12" >
+        <ion-col>
           <div padding>            
-            <ion-select [(ngModel)]="finca" name="finca" placeholder="Seleccione una finca" ngModel required>
-              <ion-select-option *ngFor="let finca of listaFincas"  value="{{finca.finca_id}}">{{ finca.nombre }}</ion-select-option>                  
-            </ion-select>            
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 === false">              
+              <ion-label position="floating">Finca:</ion-label>              
+              <ion-input [(ngModel)]="nombreFinca" name="nombreFinca" type="text" placeholder="Lote" ngModel required disabled></ion-input>
+            </ion-item>            
+            <ion-item *ngIf="estadoFormulario2 === false">
               <ion-label position="floating">Lote</ion-label>
               <ion-input [(ngModel)]="lote" name="lote" type="text" placeholder="Lote" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+          </div>
+          <div padding>
+            <ion-button *ngIf="estadoFormulario2 === false" expand="full" color="secondary" type="submit" [disabled]="form1.invalid" expand="block">
+              <ion-icon slot="start" name="arrow-forward-outline"></ion-icon>
+              Siguiente 
+            </ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+  <form #form2="ngForm" (ngSubmit)="registrar(form2)">
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col>
+          <div padding>  
+
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-label position="floating">Surco</ion-label>
-              <ion-input [(ngModel)]="surco" name="surco" type="number" placeholder="Surco" ngModel required></ion-input>
+              <ion-input [(ngModel)]="surco"  name="surco" type="number" placeholder="Surco" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-label position="floating">Producto</ion-label>
               <ion-input [(ngModel)]="producto" name="producto" type="text" placeholder="Producto" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-label position="floating">Variedad</ion-label>
               <ion-input [(ngModel)]="variedad" name="variedad" type="text" placeholder="Variedad" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-label position="floating">Cantidad de plantas</ion-label>
               <ion-input [(ngModel)]="cant_plantas" name="cant_plantas" type="number" placeholder="# Plantas" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-input [(ngModel)]="anio" name="anio" type="number" placeholder="Año" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-input [(ngModel)]="semana" name="semana" type="number" placeholder="Semana" ngModel required></ion-input>
             </ion-item>
-            <ion-item>
+            <ion-item *ngIf="estadoFormulario2 !== false">
               <ion-input [(ngModel)]="dia" name="dia" type="number" placeholder="Día" ngModel required></ion-input>
             </ion-item>
           </div>
 
           <div padding>
-            <ion-button expand="full" color="secondary" type="submit" [disabled]="form.invalid" expand="block">Registrar </ion-button>
+            <ion-button *ngIf="estadoFormulario2 !== false" expand="full" color="success" type="submit" [disabled]="form2.invalid" expand="block">
+              <ion-icon slot="start" name="save-outline"></ion-icon>
+              Registrar </ion-button>
+            <ion-button *ngIf="estadoFormulario2 !== false" expand="full" color="secondary" expand="block" (click)="anterior()">              
+              <ion-icon slot="start" name="arrow-back-outline"></ion-icon>
+              Anterior
+            </ion-button>
           </div>
 
         </ion-col>
@@ -66,5 +91,4 @@
     </ion-grid>
   </form>
 
-  
 </ion-content>
