--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,14 @@
       <ion-label>Siembra</ion-label>
     </ion-tab-button>
     -->
-    <ion-tab-button (click)="menuAplicacion()">
+    <ion-tab-button (click)="menuPlanilla()">
       <ion-icon name="reader-outline"></ion-icon>
-      <ion-label>Ejecutadas</ion-label>
+      <ion-label>PLanilla</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button (click)="menuProductos()">
+      <ion-icon name="cart-outline"></ion-icon>
+      <ion-label>Productos</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
