--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -1,8 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-button color="light" size="small" routerLink="/home">
-      <ion-icon name="arrow-back-outline"></ion-icon>
-    </ion-button>
+  <ion-toolbar color="light">    
     <ion-title stacked class="my-title" color="dark">
       <div font size=4 align="center"><strong>AGENDA APP</strong></div>
       <div font size=1 align="center"><i>
@@ -12,71 +9,102 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Planilla de aplicación</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true">  
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">      
+    </ion-refresher-content>
+    
+  </ion-refresher>
 
-  <form #form="ngForm" (ngSubmit)="registrar(form)">
+  <form #form="ngForm" (ngSubmit)="buscarLotes(form)" *ngIf="estadoSiguiente === false">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12" >
-          <div padding>            
-              <ion-select [(ngModel)]="lote" name="lote" placeholder="Seleccione un lote">
-                <ion-select-option *ngFor="let lote of listaLotes"  value="{{lote}}">{{ lote }}</ion-select-option>
-              </ion-select>            
-              <ion-select [(ngModel)]="actividad" name="actividad" placeholder="Seleccione una actividad">
-                <ion-select-option *ngFor="let actividad of listaActividad" value="{{actividad}}">{{ actividad }}</ion-select-option>
-              </ion-select>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div padding>
+            <ion-select [(ngModel)]="finca" name="finca" placeholder="Seleccione una finca">
+              <ion-select-option *ngFor="let fincas of fincaLista" value="{{fincas.finca_id}}" >{{fincas.nombre}}
+              </ion-select-option>
+            </ion-select>
+            <ion-button expand="full" color="secondary" type="submit" [disabled]="form.invalid" expand="block">Siguiente</ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+  <form #form="ngForm" *ngIf="estadoSiguiente === true" (ngSubmit)="registrar(form)">
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div padding>
+            <ion-select [(ngModel)]="lote" name="lote" placeholder="Seleccione un lote">
+              <ion-select-option *ngFor="let lote of listaLotes" value="{{lote.plano_id}}"> Lote: {{ lote.lote }} - Surco: {{lote.surco}}</ion-select-option>
+            </ion-select>
+            <ion-select [(ngModel)]="actividad" name="actividad" placeholder="Seleccione una actividad">
+              <ion-select-option *ngFor="let actividad of listaActividad" value="{{actividad}}">{{ actividad }}
+              </ion-select-option>
+            </ion-select>
             <ion-item>
               <ion-label position="floating">Control</ion-label>
-              <ion-input [(ngModel)]="control" name="control" type="text" placeholder="Control" ngModel required></ion-input>
+              <ion-input [(ngModel)]="control" name="control" type="text" placeholder="Control" ngModel required>
+              </ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Prevencion</ion-label>
-              <ion-input [(ngModel)]="prevencion" name="prevencion" type="text" placeholder="Prevencion" ngModel required></ion-input>
+              <ion-input [(ngModel)]="prevencion" name="prevencion" type="text" placeholder="Prevencion" ngModel
+                required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Fertilizacion</ion-label>
-              <ion-input [(ngModel)]="fertilizacion" name="fertilizacion" type="text" placeholder="Fertilización" ngModel required></ion-input>
+              <ion-input [(ngModel)]="fertilizacion" name="fertilizacion" type="text" placeholder="Fertilización"
+                ngModel required></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label position="floating">Producto</ion-label>
-              <ion-input [(ngModel)]="producto" name="producto" type="text" placeholder="Producto" ngModel required></ion-input>
-            </ion-item>
+            <ion-select [(ngModel)]="producto" name="producto" placeholder="Seleccione un producto" ngModel required>
+              <ion-select-option *ngFor="let producto of productos" value="{{producto.producto_id}}" >
+                {{producto.nombre}} - {{producto.variedad}}
+              </ion-select-option>
+            </ion-select>            
             <ion-item>
               <ion-label position="floating">Dosis</ion-label>
-              <ion-input [(ngModel)]="dosis" name="dosis" type="number" placeholder="Dosis (L)" ngModel required></ion-input>
+              <ion-input [(ngModel)]="dosis" name="dosis" type="number" placeholder="Dosis (L)" ngModel required>
+              </ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Mezcla total</ion-label>
-              <ion-input [(ngModel)]="mezcla_total" name="mezcla_total" type="number" placeholder="Mezcla Total" ngModel required></ion-input>
+              <ion-input [(ngModel)]="mezcla_total" name="mezcla_total" type="number" placeholder="Mezcla Total" ngModel
+                required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Total dosis</ion-label>
-              <ion-input [(ngModel)]="total_dosis" name="total_dosis" type="number" placeholder="Total Dosis" ngModel required></ion-input>
+              <ion-input [(ngModel)]="total_dosis" name="total_dosis" type="number" placeholder="Total Dosis" ngModel
+                required></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Elaborado</ion-label>
-              <ion-input [(ngModel)]="elaborado" name="elaborado" type="text" placeholder="Elaborado" ngModel required></ion-input>
+              <ion-input [(ngModel)]="elaborado" name="elaborado" type="text" placeholder="Elaborado" ngModel required>
+              </ion-input>
             </ion-item>
-            <ion-item>              
+            <ion-item>
               <ion-label position="floating">Fecha aplicacion</ion-label>
-              <ion-datetime [(ngModel)]="fecha_aplicacion" name="fecha_aplicacion" value="2021-05-20" placeholder="Seleccionar fecha" ngModel required></ion-datetime>
-            </ion-item>            
+              <ion-datetime [(ngModel)]="fecha_aplicacion" name="fecha_aplicacion" value="2021-05-20"
+                placeholder="Seleccionar fecha" ngModel required></ion-datetime>
+            </ion-item>
             <ion-select [(ngModel)]="ejecucion" name="ejecucion" placeholder="Seleccione una ejecución">
-              <ion-select-option *ngFor="let ejec of listaEjecucion"  value="{{ejec}}">{{ ejec }}</ion-select-option>                  
+              <ion-select-option *ngFor="let ejec of listaEjecucion" value="{{ejec}}">{{ ejec }}</ion-select-option>
             </ion-select>
             <ion-item>
               <ion-label position="floating">Calidad ejecucion</ion-label>
-              <ion-input [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" type="number" placeholder="Calidad Ejecución" ngModel required></ion-input>
+              <ion-input [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" type="number"
+                placeholder="Calidad Ejecución" ngModel required></ion-input>
             </ion-item>
           </div>
 
           <div padding>
-            <ion-button expand="full" color="secondary" type="submit" [disabled]="form.invalid" expand="block">Registrar </ion-button>
+            <ion-button expand="full" color="secondary" type="submit" [disabled]="form.invalid" expand="block">Registrar
+            </ion-button>
           </div>
 
         </ion-col>
@@ -84,5 +112,5 @@
     </ion-grid>
   </form>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<!--  <app-explore-container name="Tab 2 page"></app-explore-container> -->
 </ion-content>
