--- a/src/app/pages/aplicacion/ver-planilla/ver-planilla.component.html
+++ b/src/app/pages/aplicacion/ver-planilla/ver-planilla.component.html
@@ -27,8 +27,8 @@
       <ion-icon slot="end" name="reader-outline" ></ion-icon>
     </ion-item>
   </ion-list>
-  <!--<ion-button expand="full" color="secondary" expand="block" (click)="nuevaPlanilla()">
+  <ion-button expand="full" color="secondary" expand="block" (click)="nuevaPlanilla()">
     <ion-icon slot="start" name="arrow-forward-outline"></ion-icon>
       Registrar 
-  </ion-button>-->
+  </ion-button>
 </ion-content>
