--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -3,7 +3,7 @@
     <ion-title stacked class="my-title" color="dark">
       <div font size=4 align="center"><strong>AGENDA APP</strong></div>
       <div font size=1 align="center"><i>
-          <H6>Planilla de aplicación</H6>
+          <H6>{{titulo}}</H6>
         </i></div>
     </ion-title>
   </ion-toolbar>
@@ -25,6 +25,9 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
+            <ion-label *ngIf="estadoFincaEditar === true">
+              {{nombreFincaEditar}}
+            </ion-label>
             <ion-select [(ngModel)]="finca" name="finca" placeholder="Seleccione una finca">
               <ion-select-option *ngFor="let fincas of fincaLista" value="{{fincas.finca_id}}" >{{fincas.nombre}}
               </ion-select-option>
@@ -103,8 +106,9 @@
           </div>
 
           <div padding>
-            <ion-button expand="full" color="secondary" type="submit" [disabled]="form.invalid" expand="block">Registrar
+            <ion-button expand="full" color="success" type="submit" [disabled]="form.invalid" expand="block">{{nombreBoton}}
             </ion-button>
+            <ion-button expand="full" color="secondary" expand="block" (click)="volver()">Volver</ion-button>
           </div>
 
         </ion-col>
