--- a/src/app/pages/finca/finca.component.html
+++ b/src/app/pages/finca/finca.component.html
@@ -21,7 +21,7 @@
             </ion-item>            
           </div>
           <div padding>
-            <ion-button expand="full" color="secondary" [disabled]="form.invalid" expand="block" (click)="agregarFinca(form)">Agregar </ion-button>
+            <ion-button expand="full" color="secondary" [disabled]="form.invalid" expand="block" (click)="agregarFinca(form)">{{nombreBoton}} </ion-button>
           </div>
         </ion-col>
       </ion-row>
