--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,10 +7,13 @@
 <br>
 <ion-content [fullscreen]="true">
   <ion-card>    
-
     <img src="../../../assets/img/logoInicio.jpg" />
     <ion-card-header>      
       <ion-card-title>Agenda Agrícola</ion-card-title>
     </ion-card-header>    
   </ion-card>
+  <ion-button href={{url}} color="success">
+    <ion-icon name="logo-whatsapp">
+    </ion-icon>
+  </ion-button>  
 </ion-content>
