--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,31 @@
-<ion-tabs>
-  <ion-tab-bar slot="bottom">   
-    <ion-buttons slot="start">
-      <ion-menu-button color="warning" menu="primerMenu"></ion-menu-button>
-    </ion-buttons>
+<ion-content [fullscreen]="true">  
+  <ion-tabs>
+    <ion-tab-bar slot="bottom" *ngIf="loginEstado===true">
+      <ion-buttons slot="start">
+        <ion-menu-button color="warning" menu="primerMenu"></ion-menu-button>
+      </ion-buttons>      
 
-    <ion-tab-button (click)="menuFinca()" >
-      <ion-icon name="home-outline"></ion-icon>      
-      <ion-label>Finca</ion-label>
-    </ion-tab-button>
-
-    <!--<ion-tab-button (click)="menuSiembra()">
+      <ion-tab-button (click)="menuFinca()">
+        <ion-icon name="home-outline"></ion-icon>        
+      </ion-tab-button>
+  
+      <!--<ion-tab-button (click)="menuSiembra()">
       <ion-icon name="leaf-outline"></ion-icon>
       <ion-label>Siembra</ion-label>
     </ion-tab-button>
     -->
-    <ion-tab-button (click)="menuPlanilla()">
-      <ion-icon name="reader-outline"></ion-icon>
-      <ion-label>PLanilla</ion-label>
-    </ion-tab-button>
+     <ion-tab-button (click)="menuPlanilla()">
+        <ion-icon name="reader-outline"></ion-icon>        
+      </ion-tab-button>
 
-    <ion-tab-button (click)="menuProductos()">
-      <ion-icon name="cart-outline"></ion-icon>
-      <ion-label>Productos</ion-label>
-    </ion-tab-button>
+      <ion-tab-button (click)="menuProductos()">
+        <ion-icon name="cart-outline"></ion-icon>        
+      </ion-tab-button>
 
-  </ion-tab-bar>
-</ion-tabs>
+      <ion-tab-button (click)="configuracion()">
+        <ion-icon name="settings-outline"></ion-icon> 
+      </ion-tab-button>
+
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-content>
