--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -28,6 +28,18 @@
               <ion-input [(ngModel)]="cedula" name="cedula" type="number" ngModel required></ion-input>
             </ion-item>
             <ion-item>
+              <ion-label position="floating">Correo electronico</ion-label>
+              <ion-input [(ngModel)]="correo" name="correo" type="email" placeholder="Correo electrónico" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Departamento</ion-label>
+              <ion-input [(ngModel)]="departamento" name="depto" type="text" placeholder="Departamento" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Ciudad</ion-label>
+              <ion-input [(ngModel)]="ciudad" name="ciudad" type="text" placeholder="Ciudad" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
               <ion-label position="floating">Contraseña</ion-label>
               <ion-input [(ngModel)]="clave" name="clave" type="password" ngModel required></ion-input>
             </ion-item>
