--- a/src/app/pages/aplicacion/aplicacion.page.html
+++ b/src/app/pages/aplicacion/aplicacion.page.html
@@ -43,6 +43,11 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
+            <ion-item>
+              <ion-label *ngIf="estadoEditar === true">
+                {{this.loteNombre}}
+              </ion-label>
+            </ion-item>            
             <ion-select [(ngModel)]="lote" name="lote" placeholder="Seleccione un lote">
               <ion-select-option *ngFor="let lote of listaLotes" value="{{lote.plano_id}}"> Lote: {{ lote.lote }} - Surco: {{lote.surco}}</ion-select-option>
             </ion-select>
@@ -50,21 +55,16 @@
               <ion-select-option *ngFor="let actividad of listaActividad" value="{{actividad}}">{{ actividad }}
               </ion-select-option>
             </ion-select>
+
+            <ion-select [(ngModel)]="control" name="control" placeholder="Seleccione una opción">
+              <ion-select-option *ngFor="let controlL of controlTipo" value="{{controlL}}">{{controlL}}
+              </ion-select-option>
+            </ion-select>
             <ion-item>
-              <ion-label position="floating">Control</ion-label>
-              <ion-input [(ngModel)]="control" name="control" type="text" placeholder="Control" ngModel required>
-              </ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Prevencion</ion-label>
-              <ion-input [(ngModel)]="prevencion" name="prevencion" type="text" placeholder="Prevencion" ngModel
-                required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Fertilizacion</ion-label>
-              <ion-input [(ngModel)]="fertilizacion" name="fertilizacion" type="text" placeholder="Fertilización"
-                ngModel required></ion-input>
-            </ion-item>
+              <ion-label *ngIf="estadoEditar === true">
+                {{this.productoNombre}}
+              </ion-label>
+            </ion-item>            
             <ion-select [(ngModel)]="producto" name="producto" placeholder="Seleccione un producto" ngModel required>
               <ion-select-option *ngFor="let producto of productos" value="{{producto.producto_id}}" >
                 {{producto.nombre}} - {{producto.variedad}}
@@ -95,14 +95,24 @@
               <ion-datetime [(ngModel)]="fecha_aplicacion" name="fecha_aplicacion" value="2021-05-20"
                 placeholder="Seleccionar fecha" ngModel required></ion-datetime>
             </ion-item>
+            <ion-item>
+              <ion-label *ngIf="estadoEditar === true">
+                {{this.ejecucionNombre}}
+              </ion-label>
+            </ion-item>
             <ion-select [(ngModel)]="ejecucion" name="ejecucion" placeholder="Seleccione una ejecución">
               <ion-select-option *ngFor="let ejec of listaEjecucion" value="{{ejec}}">{{ ejec }}</ion-select-option>
             </ion-select>
             <ion-item>
               <ion-label position="floating">Calidad ejecucion</ion-label>
-              <ion-input [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" type="number"
-                placeholder="Calidad Ejecución" ngModel required></ion-input>
             </ion-item>
+            <ion-item>              
+              <ion-range [(ngModel)]="calidad_ejecucion" name="calidad_ejecucion" min="0" max="5" step="0.5" snaps="true" color="secondary" ngModel required>
+                <ion-label slot="start">0</ion-label>
+                <ion-label slot="end">5</ion-label>
+              </ion-range>
+            </ion-item>
+            
           </div>
 
           <div padding>
