--- a/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
+++ b/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
@@ -20,37 +20,36 @@
     
   </ion-refresher>
   <ion-item-group *ngFor="let planilla of planillas">
-    <ion-item-divider>
+    <ion-item-divider color="secondary">
       <ion-icon slot="start" name="pencil-outline" button (click)="editar(planilla.planilla_id)"></ion-icon> 
       <ion-label> Formulación: </ion-label>        
+      <ion-label>{{planilla.fechaString}} </ion-label>
     </ion-item-divider>
-    <ion-item-divider>
-      <ion-label>{{planilla.fecha_formulacion}} </ion-label>
-    </ion-item-divider>
+    
 
     <ion-item>
       <ion-label>Finca: </ion-label>
       <ion-label>{{planilla.fincaNombre}}</ion-label>
     </ion-item>
-    <ion-item>
+    <ion-item-divider>
       <ion-label>Lote: </ion-label>
-      <ion-label>{{planilla.lote}}</ion-label>
+    </ion-item-divider>          
+    <ion-item>
+      <ion-label>      {{planilla.lote}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Actividad: </ion-label>
       <ion-label>{{planilla.actividad}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Control: </ion-label>
+      <ion-label>Tipo: </ion-label>
       <ion-label>{{planilla.control}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Fertilización: </ion-label>
-      <ion-label>{{planilla.fertilizacion}}</ion-label>
-    </ion-item>
-    <ion-item>
+    </ion-item>    
+    <ion-item-divider>
       <ion-label>Producto: </ion-label>
-      <ion-label>{{planilla.producto}}</ion-label>
+    </ion-item-divider>
+    <ion-item>
+      <ion-label>      {{planilla.producto}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Dosis: </ion-label>
