--- a/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
+++ b/src/app/pages/aplicacion/ver-planilla/planillas/planillas.component.html
@@ -69,7 +69,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Fecha aplicación: </ion-label>
-      <ion-label> {{planilla.fecha_aplicacion}}</ion-label>
+      <ion-label> {{planilla.fechaAplicacionString}}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Estado: </ion-label>
