--- a/src/app/pages/siembra/siembra.page.html
+++ b/src/app/pages/siembra/siembra.page.html
@@ -70,12 +70,15 @@
               <ion-input [(ngModel)]="cant_plantas" name="cant_plantas" type="number" placeholder="# Plantas" ngModel required></ion-input>
             </ion-item>
             <ion-item>
+              <ion-label position="floating">Año</ion-label>
               <ion-input [(ngModel)]="anio" name="anio" type="number" placeholder="Año" ngModel required></ion-input>
             </ion-item>
             <ion-item>
+              <ion-label position="floating">Semana</ion-label>
               <ion-input [(ngModel)]="semana" name="semana" type="number" placeholder="Semana" ngModel required></ion-input>
             </ion-item>
             <ion-item>
+              <ion-label position="floating">Día</ion-label>
               <ion-input [(ngModel)]="dia" name="dia" type="number" placeholder="Día" ngModel required></ion-input>
             </ion-item>
           </div>
