--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -22,7 +22,8 @@
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col>
-          <div padding>            
+          <div padding>           
+            <ion-label stacked class="sub-title-label">Nuevo producto:</ion-label>    
             <ion-item>
               <ion-label position="floating">Nombre:</ion-label>              
               <ion-input [(ngModel)]="nombre" name="nombre" type="text" placeholder="Nombre" ngModel required></ion-input>
